<resources>
    <string name="app_name">Smart Movie</string>

    <string name="search">Search</string>

    <string name="switch_orientation">Switch Orientation</string>

    <string name="title_puss_in_boots_the_last_wish">Puss in Boots: The Last Wish</string>
    <string name="_07_dec_2022">07 Dec 2022</string>
    <string name="animated_adventure_comedy">Animated, Adventure, Comedy</string>
    <string name="overview">Overview</string>
    <string name="puss_in_boots_des">Puss in Boots: The Last Wish is a 2022 American 3D computer animated adventure comedy film directed by Joel Crawford. It\'s the sequel to Puss in Boots (2011) and the second installment of the Puss in Boots franchise. It is the studio\'s 43rd feature film. Antonio Banderas and Salma Hayek Pinault reprised their roles from the first film with Harvey Guillén, Florence Pugh, Olivia Colman, Ray Winstone, Samson Kayo, John Mulaney, Wagner Moura, Da\'Vine Joy Randolph and Anthony Mendez joining them voicing new characters.\n\nThe film was released on December 21, 2022. The film received universal acclaim from critics, who praised the animation, themes, voice acting and humor, with many considering it even better than the first film.\n\nIn addition one of the extra features in the Home Media release includes a four minute short known as \"The Trident\" which shows the story of how Puss lost one of his previous eight lives.</string>
    <string name="now_playing">Now playing</string>
    <string name="tap_to_rotate_list">Tap to rotate list</string>
    <string name="_8_6">8.6</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="discover">Discover</string>
    <string name="genres">Genres</string>
    <string name="artists">Artists</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Feed</string>
    <string name="top_rated">Top Rated</string>
    <string name="popular">Popular</string>
    <string name="up_comming">Up Comming</string>
    <string name="now_playing_tab">Now Playing</string>
    <string name="up_coming">Up Coming</string>
    <string name="others">Others\n</string>
    <string name="most_popular">Most Popular</string>
    <string name="see_all">See All</string>
    <string name="go_to">Go to</string>
    <string name="poster">Poster</string>
    <string name="no_result">No result!</string>
    <string name="loading">Loading</string>
    <string name="tap_to_try_again">Tap to try again</string>
    <string name="loading_more">Loading more</string>
    <string name="search_something">Search and enjoy your movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="animation">Animation</string>
    <string name="error_message">Errors</string>

    <string name="title_howls_moving_castle">Howl\'s Moving Castle</string>
    <string name="des_howls_moving_castle">Howl\'s Moving Castle (Japanese: ハウルの動く城, Hepburn: Hauru no Ugoku Shiro) is a 2004 Japanese animated fantasy film written and directed by Hayao Miyazaki. The film is set in a fictional kingdom where both magic and early twentieth-century technology are prevalent, against the backdrop of a war with another kingdom. It tells the story of Sophie, a young milliner who is turned into an elderly woman by a witch who enters her shop and curses her. She encounters a wizard named Howl and gets caught up in his resistance to fighting for the king.</string>

    <string name="title_ponyo">Ponyo</string>
    <string name="des_ponyo">Ponyo (Japanese: 崖の上のポニョ, Hepburn: Gake no Ue no Ponyo, lit. \'Ponyo on the Cliff\')[a] is a 2008 Japanese animated fantasy film written and directed by Hayao Miyazaki. It was animated by Studio Ghibli for the Nippon Television Network, Dentsu, Hakuhodo DY Media Partners, Buena Vista Home Entertainment, Mitsubishi, and distributed by Toho. The film stars Yuria Nara, Hiroki Doi, Tomoko Yamaguchi, Kazushige Nagashima, Yūki Amami, George Tokoro, Rumi Hiiragi, Akiko Yano, Kazuko Yoshiyuki and Tomoko Naraoka. It is the eighth film Miyazaki directed for Studio Ghibli, and his tenth overall. The film tells the story of Ponyo, a goldfish who escapes from the ocean and is helped by a five-year-old human boy, Sōsuke, after she is washed ashore while trapped in a glass jar. As they bond with each other, Ponyo desires to become a human girl, against the devastating circumstances brought about by her acquisition and use of magic.</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="cancel">Cancel</string>
</resources>