<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/img_poster"
            android:contentDescription="@string/poster"
            android:src="@drawable/puss_in_boots"
            android:layout_weight="7"
            android:scaleType="centerCrop"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3">

            <RatingBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rating_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:progressTint="@color/yellow_star"
                android:scaleX="0.5"
                android:scaleY="0.5"
                android:isIndicator="true"
                android:layout_marginEnd="-50dp"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                app:layout_constraintEnd_toStartOf="@id/rating_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="-40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_title"
                    android:text="@string/title_puss_in_boots_the_last_wish"
                    android:maxLines="2"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_genres"
                    android:text="@string/loading"
                    android:textSize="14sp"
                    android:textColor="@color/text_color_medium_gray"
                    android:maxLines="2"
                    app:layout_constraintStart_toStartOf="@id/text_title"
                    app:layout_constraintTop_toBottomOf="@id/text_title"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>