<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:layout_marginBottom="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background_gray">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/puss_in_boots"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/app_background_white"
            android:layout_marginStart="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/img_poster"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/text_title"
                android:text="@string/title_puss_in_boots_the_last_wish"
                android:textColor="@color/text_color_gray"
                android:textSize="16sp"
                android:maxLines="2"
                android:layout_marginEnd="5dp"
                android:layout_marginTop="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@id/button_favorite"
                app:layout_constraintStart_toStartOf="@id/text_overview"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/text_date"
                android:text="@string/_07_dec_2022"
                android:textColor="@color/text_color_medium_gray"
                app:layout_constraintTop_toBottomOf="@id/text_title"
                app:layout_constraintStart_toStartOf="@id/text_overview"
                android:layout_marginTop="5dp"
                android:textSize="14sp"/>

            <com.example.smartmoviemock.ui.customview.CustomFavoriteButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="5dp"
                android:id="@+id/button_favorite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_overview"
                android:text="@string/puss_in_boots_des"
                android:textColor="@color/text_color_medium_gray"
                android:maxLines="3"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@id/text_date"
                app:layout_constraintStart_toStartOf="@id/text_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>